<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dev.bollha.tcc_prototipo.control.ObjetoControl">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Condutor do Veiculo"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spnCondutor"
        android:layout_width="353dp"
        android:layout_height="40dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView22"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="@+id/textView13"
        android:layout_marginLeft="0dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Marca"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="61dp"
        android:layout_marginTop="14dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/spnCondutor" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Modelo"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="45dp"
        android:layout_marginTop="14dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/edtMarca" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Caracterizado"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edtPlaca"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/edtPlaca" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Segurado"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edtPlaca"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Renavam"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="85dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/edtRenavam"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Placa"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/edtPlaca"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="38dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ano"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="50dp"
        app:layout_constraintRight_toRightOf="@+id/spnCondutor"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/spnCondutor" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Alugado"
        app:layout_constraintRight_toLeftOf="@+id/edtRenavam"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="58dp"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <EditText
        android:id="@+id/edtMarca"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/edtModelo"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtMarca"
        app:layout_constraintTop_toTopOf="@+id/edtModelo" />

    <EditText
        android:id="@+id/edtModelo"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView21"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView18"
        app:layout_constraintTop_toTopOf="@+id/textView13" />

    <EditText
        android:id="@+id/edtPlaca"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/edtAno"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView22"
        app:layout_constraintTop_toTopOf="@+id/edtAno" />

    <EditText
        android:id="@+id/edtAno"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/edtRenavam"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView23"
        app:layout_constraintTop_toTopOf="@+id/edtRenavam" />

    <EditText
        android:id="@+id/edtRenavam"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintRight_toLeftOf="@+id/spnTipoVeiculo"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup7"
        android:layout_marginTop="71dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="72dp"
        app:layout_constraintLeft_toLeftOf="@+id/spnTipoVeiculo"
        app:layout_constraintTop_toTopOf="@+id/edtMarca" />

    <RadioGroup
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintRight_toLeftOf="@+id/edtAno"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup8"
        android:layout_marginEnd="57dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/textView20">

        <RadioButton
            android:id="@+id/rdbSeguradoNao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:duplicateParentState="false"
            android:text="Não" />

        <RadioButton
            android:id="@+id/edbSeguradoSIm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="Sim" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSalvarObjetoOcorrencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Salvar"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="63dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="64dp"
        app:layout_constraintRight_toRightOf="@+id/textView24"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="9dp"
        app:layout_constraintLeft_toRightOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tipo Veículo"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/edtModelo"
        app:layout_constraintTop_toTopOf="@+id/radioGroup7" />

    <Spinner
        android:id="@+id/spnTipoVeiculo"
        android:layout_width="0dp"
        android:layout_height="40dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="176dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView25"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:id="@+id/radioGroup8"
        app:layout_constraintRight_toLeftOf="@+id/textView24"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup7"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/textView19"
        app:layout_constraintLeft_toRightOf="@+id/textView19">

        <RadioButton
            android:id="@+id/rdbCaracterizadoNao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:duplicateParentState="false"
            android:text="Não" />

        <RadioButton
            android:id="@+id/rdbCaracterizadoSim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="Sim" />
    </RadioGroup>

    <RadioGroup
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:id="@+id/radioGroup7"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="151dp"
        app:layout_constraintBottom_toBottomOf="@+id/spnTipoVeiculo"
        android:layout_marginEnd="152dp"
        app:layout_constraintRight_toRightOf="@+id/edtRenavam"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="4dp"
        app:layout_constraintLeft_toLeftOf="@+id/btnSalvarObjetoOcorrencia"
        app:layout_constraintTop_toTopOf="@+id/textView24">

        <RadioButton
            android:id="@+id/rdbALugadoNao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:duplicateParentState="false"
            android:text="Não" />

        <RadioButton
            android:id="@+id/rdbALugadoSim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="Sim" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>
