<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.dev.bollha.tcc_prototipo.control.OcorrenciaControl">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Estado do Local"
        app:layout_constraintLeft_toLeftOf="@+id/spnPavimento"
        app:layout_constraintTop_toBottomOf="@+id/spnPavimento" />

    <Spinner
        android:id="@+id/spnPavimento"
        android:layout_width="950dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pavimento"
        app:layout_constraintTop_toBottomOf="@+id/spnAcidente"
        app:layout_constraintLeft_toLeftOf="@+id/spnAcidente" />

    <Spinner
        android:id="@+id/spnAcidente"
        android:layout_width="950dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tipo de Acidente"
        app:layout_constraintTop_toBottomOf="@+id/spnZona"
        app:layout_constraintLeft_toLeftOf="@+id/spnZona" />

    <Spinner
        android:id="@+id/spnZona"
        android:layout_width="950dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Zona do Acidente"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="0dp"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mão da pista"
        app:layout_constraintTop_toBottomOf="@+id/spnTipoPista"
        app:layout_constraintLeft_toLeftOf="@+id/spnTipoPista" />

    <Spinner
        android:id="@+id/spnTipoPista"
        android:layout_width="950dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tipo da Pista"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/spnEstadoLocal"
        app:layout_constraintLeft_toLeftOf="@+id/spnEstadoLocal" />

    <Spinner
        android:id="@+id/spnEstadoLocal"
        android:layout_width="950dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Velocidade da Via"
        app:layout_constraintTop_toBottomOf="@+id/spnMaoPista"
        app:layout_constraintLeft_toLeftOf="@+id/spnMaoPista" />

    <Spinner
        android:id="@+id/spnMaoPista"
        android:layout_width="950dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:layout_marginLeft="3dp"
        android:layout_marginStart="3dp" />

    <Spinner
        android:id="@+id/spnVelocidadeVia"
        android:layout_width="950dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="3dp"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintLeft_toLeftOf="@+id/textView4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btnObjeto"
        android:layout_width="475dp"
        android:layout_height="50dp"
        android:text="Objeto"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnSalvarOcorrencia" />

    <Button
        android:id="@+id/btnLocalizacao"
        android:layout_width="475dp"
        android:layout_height="50dp"
        android:text="Localização"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/spnVelocidadeVia"
        app:layout_constraintRight_toLeftOf="@+id/btnVersaoFato"
        app:layout_constraintBottom_toTopOf="@+id/btnAtor" />

    <Button
        android:id="@+id/btnVersaoFato"
        android:layout_width="475dp"
        android:layout_height="50dp"
        android:text="Versão do fato"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnObjeto" />

    <Button
        android:id="@+id/btnSalvarOcorrencia"
        android:layout_width="371dp"
        android:layout_height="48dp"
        android:text="Salvar Ocorrência"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btnAtor"
        android:layout_width="475dp"
        android:layout_height="50dp"
        android:layout_marginRight="8dp"
        android:text="Ator"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/btnLocalizacao"
        app:layout_constraintRight_toLeftOf="@+id/btnObjeto"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSalvarOcorrencia" />

</android.support.constraint.ConstraintLayout>
