...
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="-9dp"
        android:layout_marginRight="249dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="598dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="Ex: Maxwell Cravo"
...
        android:layout_marginRight="405dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/rdgSexo" />

    <EditText
        android:id="@+id/edtDocumento"
        android:layout_width="470dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:hint="CPF/CNH ou RG"
...
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/spnNacionalidade"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/spnNacionalidade" />

    <EditText
        android:id="@+id/edtIdade"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="Ex: 42"
        android:inputType="number"
        android:layout_marginStart="8dp"
...
        android:layout_width="470dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSalvarAtor"
        app:layout_constraintVertical_bias="0.005"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnSalvarAtor"
...
